fix: update code MultisigJoinTest - 50%